--- a/project1.lpi
+++ b/project1.lpi
@@ -64,7 +64,7 @@
       <Unit3>
         <Filename Value="unittable.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="Table"/>
+        <ComponentName Value="TableForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="UnitTable"/>
